# curses

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
mscurses/: CMakeLists.txt  readme.md
mscurses/include/: curses.h  curspriv.h  panel.h  term.h
mscurses/winlib/vt_x64/: pdcursesd.exp  pdcursesd.ilk  pdcursesd.lib
mscurses/winlib/vt_x86/: pdcursesd.exp  pdcursesd.ilk  pdcursesd.lib
mscurses/winlib/wincon_x64/: pdcursesd.exp  pdcursesd.ilk
mscurses/winlib/wincon_x86/: pdcursesd.exp  pdcursesd.ilk
mscurses/winlib/wingui_x64/: pdcursesd.exp  pdcursesd.ilk  pdcursesd.lib
mscurses/winlib/wingui_x86/: pdcursesd.exp  pdcursesd.ilk  pdcursesd.lib
ncurses/: CMakeLists.txt  readme.md
pdcurses/: CMakeLists.txt  readme.md
pdcurses/include/: curses.h  curspriv.h  panel.h  term.h
pdcurses/lib/wincon_x64/: pdcurses.exp  pdcurses.lib
pdcurses/lib/wincon_x86/: pdcurses.exp  pdcurses.ilk  pdcurses.lib
test/: CMakeLists.txt  readme.md
test/linux/: CMakeLists.txt
test/mstest/: CMakeLists.txt  readme.md  snprintf.c
test/mstest/calendar/: calendar.c
test/mstest/firework/: firework.c
test/mstest/init_col/: init_col.c
test/mstest/mbrot/: mbrot.c
test/mstest/newtest/: newtest.c
test/mstest/newwin/: newwin.c
test/mstest/ozdemo/: ozdemo.c
test/mstest/picsview/: picsview.c
test/mstest/ptest/: ptest.c
test/mstest/rain/: rain.c
test/mstest/speed/: speed.c
test/mstest/test_pan/: test_pan.c
test/mstest/testcurs/: testcurs.c
test/mstest/tuidemo/: tui.c  tui.h  tuidemo.c
test/mstest/version/: version.c
test/mstest/widetest/: widetest.c
test/mstest/worm/: worm.c
test/mstest/xmas/: xmas.c
test/pntest0/: CMakeLists.txt  README.rst
test/pntest0/06-output-functions/: main.c
test/pntest0/07-input-functions/: main.c
test/pntest0/09-windows/: main.c
test/pntest0/10-colors/: main.c
test/pntest0/11-keyboard/: main.c
test/pntest0/12-mouse/: main.c
test/pntest0/14-misc/: leave-ncurses.c
test/pntest1/: CMakeLists.txt
test/pntest1/01-basic/: pdce15.c  pdce16.c
test/windows/: CMakeLists.txt
