# 指定CMake编译最低要求版本
cmake_minimum_required(VERSION 2.8)

# 暴露lib和头文件
if(UNIX)
    include_directories(${MSCURSESE_INCLUDE_DIRS})
    link_directories(${VT_MSCURSESE_LIBRARIES})
elseif(WIN32)
    include_directories(${MSCURSESE_INCLUDE_DIRS})
    link_directories(${VT_MSCURSESE_LIBRARIES})
endif()

add_executable(vt_tuidemo tuidemo/tuidemo.c tuidemo/tui.c)
add_executable(vt_calendar calendar/calendar.c)
add_executable(vt_firework firework/firework.c)
add_executable(vt_init_col init_col/init_col.c)
add_executable(vt_mbrot mbrot/mbrot.c)
add_executable(vt_newtest newtest/newtest.c)
# add_executable(vt_ozdemo ozdemo/ozdemo.c)
add_executable(vt_picsview picsview/picsview.c)
add_executable(vt_ptest ptest/ptest.c)
add_executable(vt_rain rain/rain.c)
add_executable(vt_speed speed/speed.c)
add_executable(vt_version version/version.c)
# add_executable(vt_test_pan test_pan/test_pan.c)
add_executable(vt_testcurs testcurs/testcurs.c)
add_executable(vt_worm worm/worm.c)
add_executable(vt_xmas xmas/xmas.c)

target_link_libraries(vt_tuidemo ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_calendar ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_firework ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_init_col ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_mbrot ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_newtest ${VT_MSCURSESE_LIBRARIES})
# target_link_libraries(vt_ozdemo ${VT_MSCURSESE_LIBRARIES})
# target_include_directories(vt_ozdemo INTERFACE ${CURSESE_INCLUDE_DIRS})
target_link_libraries(vt_picsview ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_ptest ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_rain ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_speed ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_version ${VT_MSCURSESE_LIBRARIES})
# target_link_libraries(vt_test_pan ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_testcurs ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_worm ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_xmas ${VT_MSCURSESE_LIBRARIES})



