# 指定CMake编译最低要求版本
cmake_minimum_required(VERSION 3.1)

# 暴露lib和头文件
if(UNIX)
    include_directories(${MSCURSESE_INCLUDE_DIRS})
    link_directories(${VT_MSCURSESE_LIBRARIES})
elseif(WIN32)
    include_directories(${MSCURSESE_INCLUDE_DIRS})
    link_directories(${VT_MSCURSESE_LIBRARIES})
    link_directories(${WINCON_MSCURSESE_LIBRARIES})
    link_directories(${WINGUI_MSCURSESE_LIBRARIES})
endif()

add_executable(vt_tuidemo tuidemo/tuidemo.c tuidemo/tui.c)
add_executable(vt_calendar calendar/calendar.c)
add_executable(vt_firework firework/firework.c)
add_executable(vt_init_col init_col/init_col.c)
add_executable(vt_mbrot mbrot/mbrot.c)
# add_executable(vt_newtest newtest/newtest.c) #failed windows
# add_executable(vt_ozdemo ozdemo/ozdemo.c)
add_executable(vt_picsview picsview/picsview.c)
add_executable(vt_ptest ptest/ptest.c)
add_executable(vt_rain rain/rain.c)
add_executable(vt_speed speed/speed.c)
add_executable(vt_version version/version.c)
# add_executable(vt_test_pan test_pan/test_pan.c)
add_executable(vt_testcurs testcurs/testcurs.c)
add_executable(vt_worm worm/worm.c)
add_executable(vt_xmas xmas/xmas.c)

target_link_libraries(vt_tuidemo ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_calendar ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_firework ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_init_col ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_mbrot ${VT_MSCURSESE_LIBRARIES})
# target_link_libraries(vt_newtest ${VT_MSCURSESE_LIBRARIES}) #failed windows
# target_link_libraries(vt_ozdemo ${VT_MSCURSESE_LIBRARIES})
# target_include_directories(vt_ozdemo INTERFACE ${CURSESE_INCLUDE_DIRS})
target_link_libraries(vt_picsview ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_ptest ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_rain ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_speed ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_version ${VT_MSCURSESE_LIBRARIES})
# target_link_libraries(vt_test_pan ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_testcurs ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_worm ${VT_MSCURSESE_LIBRARIES})
target_link_libraries(vt_xmas ${VT_MSCURSESE_LIBRARIES})

set_target_properties(vt_tuidemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_calendar PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_firework PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_init_col PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_mbrot PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
# set_target_properties(vt_newtest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
# set_target_properties(vt_ozdemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_picsview PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_ptest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_rain PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_speed PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_version PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
# set_target_properties(vt_test_pan PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_worm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_testcurs PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)
set_target_properties(vt_xmas PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/vt/)

if(WIN32)
    file(COPY "${MSCURSESE_INCLUDE_DIRS}/../winlib/vt_x64/pdcursesd.dll" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/vt/)
endif()

if(WIN32)
    #################################wincon
    add_executable(wincon_tuidemo tuidemo/tuidemo.c tuidemo/tui.c)
    add_executable(wincon_calendar calendar/calendar.c)
    add_executable(wincon_firework firework/firework.c)
    add_executable(wincon_init_col init_col/init_col.c)
    add_executable(wincon_mbrot mbrot/mbrot.c)
    # add_executable(wincon_newtest newtest/newtest.c) #failed windows
    # add_executable(wincon_ozdemo ozdemo/ozdemo.c)
    add_executable(wincon_picsview picsview/picsview.c)
    add_executable(wincon_ptest ptest/ptest.c)
    add_executable(wincon_rain rain/rain.c)
    add_executable(wincon_speed speed/speed.c)
    add_executable(wincon_version version/version.c)
    # add_executable(wincon_test_pan test_pan/test_pan.c)
    add_executable(wincon_testcurs testcurs/testcurs.c)
    add_executable(wincon_worm worm/worm.c)
    add_executable(wincon_xmas xmas/xmas.c)

    target_link_libraries(wincon_tuidemo ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_calendar ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_firework ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_init_col ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_mbrot ${WINCON_MSCURSESE_LIBRARIES})
    # target_link_libraries(wincon_newtest ${WINCON_MSCURSESE_LIBRARIES}) #failed windows
    # target_link_libraries(wincon_ozdemo ${WINCON_MSCURSESE_LIBRARIES})
    # target_include_directories(wincon_ozdemo INTERFACE ${CURSESE_INCLUDE_DIRS})
    target_link_libraries(wincon_picsview ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_ptest ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_rain ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_speed ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_version ${WINCON_MSCURSESE_LIBRARIES})
    # target_link_libraries(wincon_test_pan ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_testcurs ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_worm ${WINCON_MSCURSESE_LIBRARIES})
    target_link_libraries(wincon_xmas ${WINCON_MSCURSESE_LIBRARIES})
    
    set_target_properties(wincon_tuidemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_calendar PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_firework PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_init_col PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_mbrot PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    # set_target_properties(wincon_newtest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    # set_target_properties(wincon_ozdemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_picsview PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_ptest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_rain PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_speed PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_version PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    # set_target_properties(wincon_test_pan PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_testcurs PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_worm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)
    set_target_properties(wincon_xmas PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wincon/)

    file(COPY "${MSCURSESE_INCLUDE_DIRS}/../winlib/wincon_x64/pdcursesd.dll" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/wincon/)

    #################################wingui
    add_executable(wingui_tuidemo tuidemo/tuidemo.c tuidemo/tui.c)
    add_executable(wingui_calendar calendar/calendar.c)
    add_executable(wingui_firework firework/firework.c)
    add_executable(wingui_init_col init_col/init_col.c)
    add_executable(wingui_mbrot mbrot/mbrot.c)
    # add_executable(wingui_newtest newtest/newtest.c) #failed windows
    # add_executable(wingui_ozdemo ozdemo/ozdemo.c)
    add_executable(wingui_picsview picsview/picsview.c)
    add_executable(wingui_ptest ptest/ptest.c)
    add_executable(wingui_rain rain/rain.c)
    add_executable(wingui_speed speed/speed.c)
    add_executable(wingui_version version/version.c)
    # add_executable(wingui_test_pan test_pan/test_pan.c)
    add_executable(wingui_testcurs testcurs/testcurs.c)
    add_executable(wingui_worm worm/worm.c)
    add_executable(wingui_xmas xmas/xmas.c)

    target_link_libraries(wingui_tuidemo ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_calendar ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_firework ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_init_col ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_mbrot ${WINGUI_MSCURSESE_LIBRARIES})
    # target_link_libraries(wingui_newtest ${WINGUI_MSCURSESE_LIBRARIES}) #failed windows
    # target_link_libraries(wingui_ozdemo ${WINGUI_MSCURSESE_LIBRARIES})
    # target_include_directories(wingui_ozdemo INTERFACE ${CURSESE_INCLUDE_DIRS})
    target_link_libraries(wingui_picsview ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_ptest ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_rain ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_speed ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_version ${WINGUI_MSCURSESE_LIBRARIES})
    # target_link_libraries(wingui_test_pan ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_testcurs ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_worm ${WINGUI_MSCURSESE_LIBRARIES})
    target_link_libraries(wingui_xmas ${WINGUI_MSCURSESE_LIBRARIES})
    
    set_target_properties(wingui_tuidemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_calendar PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_firework PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_init_col PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_mbrot PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    # set_target_properties(wingui_newtest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    # set_target_properties(wingui_ozdemo PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_picsview PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_ptest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_rain PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_speed PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_version PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    # set_target_properties(wingui_test_pan PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_testcurs PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_worm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
    set_target_properties(wingui_xmas PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/wingui/)

    file(COPY "${MSCURSESE_INCLUDE_DIRS}/../winlib/wingui_x64/pdcursesd.dll" DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/wingui/)
endif()

